fixed footer spacing;

--- a/css/home.css
+++ b/css/home.css
@@ -101,15 +101,6 @@ h1, h2 {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    animation: circular 30s infinite linear;
-}
-
-@keyframes circular {
-    0% { transform: rotate(0deg) translateX(30px) rotate(0deg); }
-    25% { transform: rotate(90deg) translateX(30px) rotate(-90deg); }
-    50% { transform: rotate(180deg) translateX(30px) rotate(-180deg); }
-    75% { transform: rotate(270deg) translateX(30px) rotate(-270deg); }
-    100% { transform: rotate(360deg) translateX(30px) rotate(-360deg); }
 }
 
 .selectable {
@@ -241,7 +232,7 @@ h1, h2 {
 }
 
 .menu-container {
-    background: black;
+    background: #00161E;
     width: 100%;
     position: sticky;
     top: 0;
@@ -255,7 +246,6 @@ h1, h2 {
     justify-content: space-evenly;
     align-items: center;
     padding: 10px;
-
 }
 
 .icons-container {
@@ -293,6 +283,15 @@ h1, h2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.footer-icon {
+    transition: box-shadow 0.3s ease-in-out;
+}
+
+.footer-icon:hover {
+    cursor: pointer;
 }
 
 @media (min-width: 925px) {
@@ -310,7 +309,6 @@ h1, h2 {
         justify-content: space-between;
         max-width: 1280px;
     }
-
 
     .bottom-background {
         background-image: url('/images/bottom-bg.svg');
@@ -353,6 +351,15 @@ h1, h2 {
 
     .selectables {
         max-width: 500px;
+        animation: circular 30s infinite linear;
+    }
+
+    @keyframes circular {
+        0% { transform: rotate(0deg) translateX(30px) rotate(0deg); }
+        25% { transform: rotate(90deg) translateX(30px) rotate(-90deg); }
+        50% { transform: rotate(180deg) translateX(30px) rotate(-180deg); }
+        75% { transform: rotate(270deg) translateX(30px) rotate(-270deg); }
+        100% { transform: rotate(360deg) translateX(30px) rotate(-360deg); }
     }
 
     .project {
